<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/cTextHeader"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/bntDatePicker"/>
    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/cWhite"
        android:background="@color/cOrange"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/ageTextField"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/cTextHeader"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/in_minutes"/>
    <Button
        android:id="@+id/btnClickMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/cWhite"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/cLightGreen"
        android:text="@string/select_date"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/selectedDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cTextHeader"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:text="@string/unknown"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cGray"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:text="@string/selected_date"/>
    <TextView
        android:id="@+id/ageInMinutesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cTextHeader"
        android:textSize="55sp"
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        android:text="@string/_0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cGray"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:text="@string/in_minutes_till_date"/>
</LinearLayout>